countries, state and cities apis added properly
